--- a/partials/ic-full-item.html
+++ b/partials/ic-full-item.html
@@ -230,7 +230,17 @@
 	<!-- start misc -->
 
 	<ic-info-tag
-		ng-repeat-start	= "key in ['name', 'website', 'email', 'phone', 'facebook', 'price', 'maxParticipants']"
+		ng-repeat-start	= "key in [website', 'email', 'twitter', 'linkedin', 'instagram', 'facebook']"
+		ng-if		= "item[key] && !editMode"
+		ic-title 	= "key | uppercase | prepend: 'INTERFACE.ITEM_' | translate"
+		ic-content	= "item[key]"
+		ic-icon		= "key | icIcon : 'item' : 'black'"
+		ic-linked
+	>
+	</ic-info-tag>
+
+	<ic-info-tag
+		ng-repeat-start	= "key in ['name', 'phone', price', 'maxParticipants']"
 		ng-if		= "item[key] && !editMode"
 		ic-title 	= "key | uppercase | prepend: 'INTERFACE.ITEM_' | translate"
 		ic-content	= "item[key]"
