--- a/partials/ic-info-tag.html
+++ b/partials/ic-info-tag.html
@@ -1,7 +1,9 @@
 <div class = "icon"><img ng-src = "{{icIcon}}"/></div>
 <div class = "title">					{{icTitle}}		</div>
+
 <div class = "content highlight">		
-	{{icContent}}	
+	<a 		ng-if = "icLinked" ng-href = "content">{{icContent}}</a>
+	<span 	>{{icContent}}</span>
 	<div 
 		ng-repeat 	= "line in icExtraLines"
 		ng-if		= "line | trim"
