--- a/partials/ic-full-item.html
+++ b/partials/ic-full-item.html
@@ -235,7 +235,7 @@
 		ic-title 	= "key | uppercase | prepend: 'INTERFACE.ITEM_' | translate"
 		ic-content	= "item[key]"
 		ic-icon		= "key | icIcon : 'item' : 'black'"
-		ic-linked
+		ic-linked	= "true"
 	>
 	</ic-info-tag>
 
