moved searchbar, added claim

--- a/partials/section-list.html
+++ b/partials/section-list.html
@@ -1,5 +1,11 @@
 <ic-search-term></ic-search-term>
 
+<ic-search				
+	ng-class 			= "{'ic-hide':!icOverlays.show.search}"
+	class 				= "white right"
+></ic-search>
+
+
 <ic-filter-interface
 	ng-if = "icShowFilter"
 >
